pane configs extra things removed, list items refreshing issue resolved, alignment resolved

--- a/src/shared/EventCard/EventCard.module.scss
+++ b/src/shared/EventCard/EventCard.module.scss
@@ -75,11 +75,6 @@
   height: 18px;
 }
 
-.category,
-.location {
-  color: $ms-color-neutralPrimary;
-}
-
 .datetime {
   color: $ms-color-neutralPrimary;
 }
@@ -164,17 +159,6 @@
 
 .category,
 .location {
+  color: $ms-color-neutralPrimary;
   color: $ms-color-neutralSecondary;
-}
-
-.category,
-.datetime,
-.location {
-  font-size: 12px;
-  font-weight: 400;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  word-wrap: normal;
-  height: 18px;
 }
