--- a/src/webparts/calendar/components/Calendar.module.scss
+++ b/src/webparts/calendar/components/Calendar.module.scss
@@ -20,6 +20,11 @@
   display: "block";
 }
 
+.webPartTitle {
+  color: #fff !important;
+  padding: 5px;
+}
+
 /* Added styles for days within the same month/week */
 .dayPropGetter {
   // background-color: $ms-primaryBackground;
