--- a/src/webparts/calendar/components/CalendarFeedSummary.module.scss
+++ b/src/webparts/calendar/components/CalendarFeedSummary.module.scss
@@ -6,10 +6,10 @@
   // it has no impact to styles, but won't complain
   // about the empty CSS class
   min-width: 340px;
-  padding-right:10px;
-  padding-left:10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  // padding-right:10px;
+  // padding-left:10px;
+  // margin-left: 10px;
+  // margin-right: 10px;
   color: inherit;
 }
 
